# Imaged-Based-Web-Scraper

./: generate_report.py  imageprocessor.py  ocr.py  pyproject.toml  run.py  screenshot.py
